--- a/Wt/style/stylesheet.css
+++ b/Wt/style/stylesheet.css
@@ -20,8 +20,12 @@ button[type=button] {
     background-color: #1D72F9;
     border: none;
     color: white;
-    padding: 16px 32px;
+    padding: 8px 16px;
     text-decoration: none;
     margin: 4px 2px;
     cursor: pointer;
+}
+
+.inplace:hover {
+   background-color: gray;
 }
