--- a/Wt/style/stylesheet.css
+++ b/Wt/style/stylesheet.css
@@ -29,3 +29,22 @@ button[type=button] {
 .inplace:hover {
    background-color: gray;
 }
+
+th {
+	background-color: #4CAF50;
+    color: white;
+    border: 1px solid black;
+   	padding: 4px;
+   	text-align: center;
+   	vertical-align: middle;
+}
+
+td {
+   	border: 1px solid black;
+   	padding: 8px;
+   	text-align: center;
+   	vertical-align: middle;
+}
+
+tr:nth-child(even){background-color: #f2f2f2;}
+tr:hover {background-color: #ddd;}
