--- a/Wt/style/stylesheet.css
+++ b/Wt/style/stylesheet.css
@@ -1,21 +1,19 @@
 .title {
   color: DimGray;
   text-align: center;
-  font-family: "Times New Roman";
-  font-size: 20px;
-
+  font-family: "Palatino";
+  font-size: 28px;
 }
 
 .error {
   color: red;
   font-style: italic;
-	
 }
+
 input[type=text]:focus, input[type=password]:focus {
     background-color: lightblue;
 }
  
-
 button[type=button] {
     background-color: #1D72F9;
     border: none;
@@ -31,7 +29,7 @@ button[type=button] {
 }
 
 th {
-	background-color: #4CAF50;
+	background-color: #2789C3;
     color: white;
     border: 1px solid black;
    	padding: 4px;
@@ -46,5 +44,6 @@ td {
    	vertical-align: middle;
 }
 
+tr:nth-child(odd){background-color: #ffffff;}
 tr:nth-child(even){background-color: #f2f2f2;}
 tr:hover {background-color: #ddd;}
